# speechio

./: .gitignore  .gitmodules  README.md  lm.yaml  recipe.sh  requirements.txt  run.sh  run_stt.sh  stt.yaml  stt_test.yaml  test.yaml  tokenizer.yaml  train.sh  train.yaml  train_stt_zh.sh
config/: data_zoo.yaml  db.yaml  logging.yaml  stt_en.yaml  stt_test_zh.yaml  stt_train_zh.yaml  stt_zh.yaml  tokenizer.yaml  train.yaml  train_sito.yaml  train_sito_zh.yaml  train_stt.yaml  train_stt_zh.yaml  train_tokenizer.yaml  train_tokenizer_en.yaml  train_tokenizer_zh.yaml
config/stt_en/: tokenizer.yaml
config/stt_zh/: test.yaml  train.yaml
configs/: logging.yaml  stt.yaml  tokenizer.yaml  tokenizer_en.yaml  tokenizer_zh.yaml  train_sito_en.yaml  train_sito_zh.yaml  train_tokenizer.yaml
data/: README.md  zoo.yaml
data/audio/: README.md  zoo.yaml
data/text/: MINI.txt
dataset/: generate_metadata.py
devops/: tokenize  tokenizer_decode  tokenizer_encode  tokenizer_train
egs/lm_train/: run.sh
egs/stt/: test.yaml  tokenizer.yaml
egs/stt_en/: data.yaml
egs/stt_zh/: data.yaml  lm.yaml  run.sh  test.yaml  tokenizer.yaml  train.yaml
libsio/: CMakeLists.txt  run.sh  run_build.sh  run_build_and_unittest.sh  stt.cc  stt.json  submodules.sh  torchscript.cc  torchscript.py
libsio/include/: sio_stt.h  stt.h
libsio/sio/: CMakeLists.txt  allocator.h  allocator_test.cc  audio.h  audio_test.cc  base.h  check.h  check_test.cc  common.h  dbg.h  dbg_test.cc  error.cc  error.h  error_test.cc  feature_extractor.h  feature_extractor_test.cc  finite_state_machine.h  finite_state_machine_test.cc  fsm.h  fsm_test.cc  heap.h  hoare.h  kenlm.h  kenlm_test.cc  language_model.h  language_model_impl.h  language_model_test.cc  link.cc  link.h  link_test.cc  linked_list.h  linked_list_test.cc  list.h  list_test.cc  log.h  log_test.cc  logger.h  logger_test.cc  macro.h  map.h  (+18 more)
libsio/src/: CMakeLists.txt  allocator_test.cc  audio.h  audio_test.cc  base.h  beam_search.h  check.h  check_test.cc  common.h  config_loader.h  config_loader_test.cc  dbg.h  dbg_test.cc  error.cc  error.h  error_test.cc  feature.h  feature_extractor.h  feature_extractor_test.cc  feature_test.cc  fsm.h  fsm_test.cc  heap.h  heap_test.cc  json.h  json.hpp  json_test.cc  language_model.h  linked_list.h  linked_list_test.cc  log.h  log_test.cc  logger_test.cc  macro.h  mean_var_norm.h  mean_var_normalizer.h  ptr.h  recognizer.h  scorer.h  search.h  (+10 more)
libsio/testdata/: fbank.cfg  graph.fsm.txt  graph.int  graph.txt  isymbol.txt  isymbols.txt  mean_var_norm.txt  sentences.txt  stt.json  token_topo.int  tokenizer.vocab
libsio/testdata/MINI/: metadata.tsv  wav.list  wav.scp
libsio/testdata/model/: lm.arpa  lm.trie  lm.vocab  tokenizer.model  tokenizer.vocab
libsio/trash/: torchscript.cc  torchscript.sh
libsio/util/: submodule_delete.sh  submodules_add.sh
model/: README.md
nnet/: conformer.py  conformer.yaml  lstm.py
ops/: audio_augment  average_models  cn_tn.py  import_data  kill  lm_prune  lm_test  lm_train  mean_var_stats_to_norm.py  mean_var_stats_to_normalizer.py  model_average  mvn_convert.py  ngram_prune  ngram_train  pull  push  run_para  sio  stt  stt_average  stt_bench  stt_error_rate  stt_export  stt_infer  stt_test  stt_train  text_norm  text_tokenize  textnorm  tokenize  tokenizer  tokenizer_decode  tokenizer_encode  tokenizer_train  train  train_ngram  train_sito  train_stt  train_tokenizer
ops/core/: conformer.py  stt.py
ops/libsio/: CMakeLists.txt  run.sh  stt.cc
ops/libsio/sio/: CMakeLists.txt  audio.cc  audio.h  audio_test.cc  check.h  check_test.cc  data_pipe.cc  data_pipe.h  data_pipe_test.cc  error_test.cc  feature_extractor.cc  feature_extractor.h  feature_test.cc  heap_test.cc  json.h  json_test.cc  link.cc  link.h  link_test.cc  linked_list.h  linked_list_test.cc  log.h  mean_var_norm.h  mean_var_normalizer.h  ptr.h  recognizer.cc  recognizer.h  recognizer_test.cc  sio.h  speech_to_text.cc  speech_to_text.h  speech_to_text_config.h  speech_to_text_manager.cc  speech_to_text_manager.h  speech_to_text_test.cc  stt.h  stt_config.h  stt_manager.cc  stt_manager.h  type.h
ops/libsio/sio/include/: sio.h  speech_to_text.h  stt.h
ops/libsio/src/: check_test.cc  error.cc  error.h  feature.h  json_test.cc  log.h  log_test.cc  map.h  ptr.h  recognizer.h  str.h
ops/libsio/testdata/: mean_var_norm_23dim.txt  mean_var_normalizer_23dim.txt  mean_var_normalizer_80dim.txt
ops/libsio/testdata/MINI/: trans.txt  wav.list
ops/nnet/: conformer.py  conformer.yaml  lstm.py  transformer.py  transformer_config.yaml
ops/pysio/: stt.py  wenet.py  wenet_wrapper.py
ops/sio/: stt.py  wenet.py
pysio/: stt.py
recipe/stt_zh/: run.sh  train.yaml
recipes/stt_zh/: run.sh  sio  test.yaml
runtime/: CMakeLists.txt  run_build.sh  sito.cc  stt.cc  submodules.sh
runtime/sio/: base.h  hoare.h  map.h  ptr.h  type.h  vec.h
runtime/sio/base/: hoare.h  list.h  map.h  ptr.h  str.h  type.h  vec.h
runtime/siobin/: stt.cc
sio/: CMakeLists.txt  kill_stt_train  pysio  stt_train  tokenizer_encode
sio/include/: sio.h
sio/src/: hoare.h
sito/: train  train_sito  train_tokenizer
sito/c/: assert.h  check.h  type.h
sito/py/: model.py
speechio/: tokenizer_decode
speechio/sio/: check.h  compiler.h  sito.cc  type.h
toolkits/: README.md
util/: create_venv.sh  gigaspeech_extract_subset.py  install_aliyun_oss_client.sh  install_dependencies.sh  setup.sh  setup_abseil.sh  setup_kaldi.sh  setup_kenlm.sh  submodule_create.sh  submodule_delete.sh
utils/: env.sh  gigaspeech_extract_subset.py  install_dependencies.sh  install_kenlm_python.sh  setup.sh  setup_abseil.sh  setup_cuda.sh  setup_kaldi.sh  setup_kenlm.sh  setup_libtorch.sh  setup_once.sh  setup_pyenv.sh  setup_wenet.sh  submodule_create.sh
